Fri Dec 13 16:08:36 2002  Gary Wong  <gtw@gnu.org>

	* Makefile.am (EXTRA_DIST): Add some necessary files.

Sat Dec  7 15:06:33 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	* bearoff.texi: add MD5 sums
	* Makefile.am: add bearoff.texi (forgotten in previous commit)

Sun Nov 24 21:55:38 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	* bearoff.texi: new chapter with some info about 
	bearoff databases (draft).
	* gnubg.texi: include new chapter.

Wed Aug 14 23:39:43 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	* gnubg.texi: draft for the import and export sections.

Wed Aug 14 21:21:02 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	* gnubg.texi: add section on match ID and position ID to the
	new manual.

Son Aug 11 18:39:19 CEST 2002  Achim Mueller <acepoint@deltacity.net>
	* gnubg.texi: new structure of the document, starting the new 
	manual now. Everybody is invited to add chapters or sections,
	but please drop me a line before.

Tue Jun 18 12:50:47 2002  Gary Wong  <gtw@gnu.org>

	* gnubg.texi: Replace the old FAQ chapter with an @include of
	Achim's FAQ.

Mon Jun 17 19:59:25 CEST 2002  Achim Mueller <acepoint@deltacity.net>
	* added faq.texi and faq.html

Thu Mar 28 20:10:09 2002  Joern Thyssen  <jthyssen@dk.ibm.com>

	* gnubg.texi: add section on position and match ID.

Wed Mar 13 11:17:11 2002  Gary Wong  <gtw@research.att.com>

	* Makefile.am: Add rules to generate gnubg.xml.

Wed Sep 19 11:19:56 2001  Gary Wong  <gtw@research.att.com>

	* gnubg.texi: Adjust documentation to suit updated mouse handling.

Mon Mar 12 11:09:45 2001  Gary Wong  <gtw@research.att.com>

	* annealing.gp: New file.

Thu Feb 22 11:42:16 2001  Gary Wong  <gtw@research.att.com>

	* gnubg.texi: More work on the manual.

Thu Feb  3 16:44:07 2000  Gary Wong  <gary@cs.arizona.edu>

	* gnubg.texi: Moved to doc/ directory, and Tom Keith's rules
	included.